# vampire-of-date

./: LICENSE  README.md  pyproject.toml
src/vod/: cleanup.py  cli.py  models.py  remediation.py  scanner.py  tui.py
src/vod/collectors/: __init__.py  android.py  base.py  linux.py  macos.py  windows.py
tests/: test_report.py
